<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="popmovies.com.example.android.baking_app.MainActivity">
    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/main_progress_bar"
        android:layout_centerInParent="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        android:id="@+id/error_text_view"
        android:padding="10dp"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:textColor="@android:color/holo_red_light"/>

    <LinearLayout
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/main_parent">

        <FrameLayout
            android:id="@+id/recipe_one"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/recipe_one_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="45sp"
                android:textStyle="bold|italic" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/recipe_two"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/recipe_two_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="45sp"
                android:textStyle="bold|italic" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/recipe_three"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/recipe_three_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="45sp"
                android:textStyle="bold|italic" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/recipe_four"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/recipe_four_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="45sp"
                android:textStyle="bold|italic" />
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>
